# scheller-linux-archive

./: .bash_profile  .bash_profile_ArchLinux  .bash_profile_CentOS6  .bashrc  .bashrc_ArchLinux  .gitignore  .vimrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  LICENSE_OLD  NOTICE  README.md  build.sbt  readme.txt
Linux/Web/: README.md  homepage.html
Linux/bash-utils/: README.md  spin
Linux/info/: GITnotes.txt  README.md  VimMinimalistic.txt
adminLogs/: ArchPythonAdminLog.txt  MSYS2AdminLog.txt  README.md  euler7ArchLinuxAdminLog.txt  gauss17ArchLinuxAdminLog.txt  gauss17_Arch_log.txt  godel2ArchLinuxAdminLog.md  godel2_PopOS_log.md  hamilton4_PopOS_log.md  init.lua  maxwell4_Arch_log.txt  noether2_PopOS_log.md  onepieceAdminLog.txt  onepiece_PopOS_log.txt  popOSAdminLog.txt
adminLogs/past_systems/: euler7_Arch_log_rip.txt
archive/: .Xresources  .kshrc
bash-utils/: Path  README.md  path  viewJarManifest  whence
bashEnvConf/: .bash_init  .bash_profile  .bashrc  .proxy_env  .xprofile  README.md  installHome
bashEnvConf/src/: fixLineEndings.hs
comp/ADT/: README.md
courses/Udacity/PythonForAI/03-gaussian/: .gitignore  LICENSE  NOTICE  README.md  dat.txt  gaussian.py  gaussian_test.py  pyproject.toml
courses/Udacity/PythonForAI/03-gaussian/html/: gaussian.html
courses/Udacity/PythonForAI/03-gaussian/src/ai/: __init__.py  distribution.py  gaussian.py
courses/Udacity/PythonForAI/03-gaussian/tests/: gaussian_test.py
devel/fpInScalaBook/: build.sbt  readme.txt
devel/grockScala/: README.md
devel/linuxHome/: .bashrc  .inputrc  .vimrc  install_linuxHome  readme-linuxHome.txt
devel/pureMath/: .gitignore  README.md
devel/pythagTriples/: .gitignore  LICENSE  README.md  develLog.readme  pythagTriples.cabal  stack.yaml
devel/pythagTriples/app/: Main.hs
devel/pythagTriples/src/: PythagTriples.hs
devel/pythagTriples/test/: Spec.hs
devel/scalaExamples/: .gitignore  README.md  splat.scala
devel/scalaSyntax/: .gitignore  README.md  splat.scala
dotfiles/: README.md  envrc.sh  init.vim  inputrc  installDotfiles  profile.sh  vimrc
dotfiles/nvim/: init.vim
educational/harmonicOscillator/: HarmonicOscWaveFunctions.mn  README.md
educational/pythagTriples/: develLog.readme  pythagTriples.cabal
educational/tensor/: README.md
env/: LICENSE  README.md  Xresources  bashrc.bash  dashrc.dash  envrc.sh  inputrc  installHome  kshrc.ksh  profile.sh  shrc.sh
env/nvim/: init.vim
env/vim/: vimrc
envConf/: .bash_init  .bash_profile  .bashrc  .env_init  .envrc  .kshrc  .profile  .proxy_env  .xinitrc  .xprofile  README.md  bash_logout.bash  bashrc.bash  dashrc.dash  env_init.ksh  env_init.sh  envrc.ksh  inputrc  installHome  kshrc.ksh  profile.sh  shrc.sh  xprofile
envConf/util/: README.md  capConvert
fpInScalaBook/: README.md
fpinscala/: README.md  build.sbt
graphics/Cairo/: .gitignore  README.md
graphics/XWindows/: README.md  jiggleMouse.c
grockScala/: .gitignore  README.md  build.sbt  splat.scala
grockScala/codeblocks/: DefsViaVals.scala
grockScala/onejar/: HelloWorld.scala  OneJar.scala  build.sbt
grockScala/splat/: build.sbt
grockScalaz/: README.md
grockScalaz/scalazREPL/: README.md
grok/C/: README.md
grok/C++/: README.md
grok/C_C++/: README.md
grok/Go/: .editorconfig  README.md
grok/Gradle/: README.md
grok/HTML/: set_right_margin.txt
grok/Haskell/: README.md
grok/Haskell/haskellParallelAndConcurrent/ghcInfo/: CHANGELOG.md  ghcInfo.cabal
grok/Haskell/pythag-triples/: CHANGELOG.md  DevelLog  LICENSE  README.md  package.yaml  pythag-triples-new.cabal  pythag-triples.cabal  stack.yaml
grok/Haskell/pythag-triples/app/: Main.hs  pythagTriplesMain.hs
grok/Haskell/pythag-triples/docs/: DevelLog
grok/Haskell/pythag-triples/docs/old/: pythag-triples-old.cabal
grok/Haskell/pythag-triples/drivers/: pythagTriples.hs
grok/Haskell/pythag-triples/lib/: PythagTriples.hs
grok/Haskell/pythag-triples/original/: package.yaml
grok/Haskell/pythag-triples/original/src/: PythagTriples.hs
grok/Haskell/pythag-triples/test/: Spec.h  Spec.hs  spec.hs
grok/Haskell/pythagTriples/: README.md  develLog.readme  package.yaml  pythagTriples.cabal  stack.yaml
grok/Haskell/pythagTriples/app/: Main.hs
grok/Haskell/pythagTriples/src/: PythagTriples.hs
grok/Java/: FragileBaseClassProblem.idea  README.md
grok/JavaScript/: README.md
grok/OldSchool/: README.md
grok/Python/: README.md
grok/Rust/: README.md
grok/Scala/: README.md
grok/Zig/: README.md
grok/grokC_C++/: README.md
grok/grokHaskell/: README.md
grok/grokJava/: README.md
grok/grokOldSchool/: README.md
grok/grokPython/: README.md
grok/grokRust/: README.md
grok/grokScala/: README.md
grok/oldSchool/: README.md
grokHaskell/haskellIntroProgramming/: README.md
grokJava/javaWithMake/: README.md  makefile
grokRust/: README.md
grokScala/: README.md  build.sbt
grokScalaz/: README.md  build.sbt
haskellIntroProgramming/: Notes.md  README.md
haskellParallelAndConcurrent/: README.md
info/: BashInfo.txt  GITnotes.txt  README.md  UnicodeCheatSheet.txt  UnixCommands.txt  VimMinimalistic.txt
linux/: .gitignore
linuxHome/: .vimrc  .wgetrc  README.md
notes/: AppleSoyboy.txt  C99FormatStrings.txt  DNS_servers.md  LinuxNotes.md  Wisdom.md  add_to_gitNotes.txt  agile.md  archJava.txt  archLinuxNotes.md  archLinuxNotes.txt  awsomeNotes.txt  bashNotes.txt  c_notes.txt  fishyFactoids.md  fpRandomIdeas.md  gitNotes.md  gitNotes.txt  gitTest.md  gnome3Conf.md  gnome40Conf.md  javaScriptNotes.txt  jupyter.md  macos.md  makeNotes.md  msys2Notes.txt  neovimFactoids.rst  nixNotes.md  nvimPlugins.md  pythonNotes.md  pythonNotes.txt  shellUtilities.txt  softwareDevTools.md  softwareDevelopment.md  sphinxNotes.md  swayNotes.md  systemConfiguration.md  unicodeCheatSheet.txt  unixCommands.txt  wisdom.md
pureMath/: README.md
pythagTriples/: README.md  develLog.readme
toolingLogs/: AnacondaPythonAdminLog.txt  ArchPythonAdminLog.md  ArchPythonAdminLog.txt  ArchTypescriptLog.md  JupiterNotebookLog.md
web/: README.md  homepage.html  style.css
(+954 files in other folders)
