name:                pythagTriples
version:             0.1.0.0
synopsis:            Pythagorean triple CLI generation program
description:         Please see README.md
homepage:            https://github.com/grscheller/pythagTriples#readme
license:             BSD3
license-file:        LICENSE
author:              Geoffrey Scheller
maintainer:          geoffrey@scheller.com
copyright:           Copyright: (c) 2016 Geoffrey R. Scheller
category:            Example
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PythagTriples
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pythagTriples
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pythagTriples
  default-language:    Haskell2010

test-suite pythagTriples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pythagTriples
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/grscheller/pythagTriples
