cabal-version:      2.4
name:               pythag-triples
version:            0.5.1.1

synopsis: Compute Pythagonean Triples

description:
    CLI command pythagTriples used to compute Pathagorean triples.
    May expand latter to also be a library.

bug-reports: https://github.com/grscheller/scheller-linux-archive

license:            BSD-3-Clause
author:             grscheller
maintainer:         geoffrey@scheller.com
copyright:          (c) 2016-2022 Geoffrey R Scheller

-- category:

extra-source-files:
    CHANGELOG.md
    LICENSE
    README.md

executable pythagTriples
    main-is:          pythagTriplesMain.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    build-depends:    split
    hs-source-dirs:   app
    default-language: Haskell2010
