cabal-version:      2.4
name:               pythag-triples
version:            0.5.4.1
synopsis:           Library and Program to generate Pythagonean Triples

description:
    Haskell library and CLI command pythagTriples used to compute
    Pathagorean triples.

homepage: https://github.com/grscheller/scheller-linux-archive
bug-reports: https://github.com/grscheller/scheller-linux-archive

license:            BSD-3-Clause
license-file:       LICENSE
author:             grscheller
maintainer:         geoffrey@scheller.com
copyright:          (c) 2016-2022 Geoffrey R Scheller

category:           Math

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  PythagTriples

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        split
    hs-source-dirs:   lib
    default-language: Haskell2010

executable pythagTriples
    main-is:          pythagTriplesMain.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        split,
        pythag-triples

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite pythag-triples-test
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    -- Test dependencies.
    build-depends:
        base ^>=4.15.1.0,
        pythag-triples
                      
