cabal-version:      2.4
name:               pythag-triples
version:            0.1.0.0

synopsis: A Pythagorean Triple Generation Program

description: TODO

bug-reports: https://github.com/grscheller/pythag-triples
license:            BSD-3-Clause
license-file:       LICENSE
author:             Geoffrey R. Scheller
maintainer:         geoffrey@scheller.com
copyright:          (c) 2016-2024 Geoffrey R Scheller
-- category:

extra-source-files:
    README.md
    CHANGELOG.md

executable pythag-triples
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
