name:                pythagTriples
version:             0.3.0.0
synopsis:            Pythagorean triple CLI generation program
description:         Please see README.md
homepage:            https://github.com/grscheller/scheller-linux-archive
license:             MIT
license-file:        LICENSE
author:              Geoffrey Scheller
maintainer:          geoffrey@scheller.com
copyright:           Copyright: (c) 2020 Geoffrey R. Scheller
category:            Example
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PythagTriples
  build-depends:       base >= 4.7 && < 5
                     , split
  ghc-options:         -Wall
  default-language:    Haskell2010

executable pythagTriples
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -dynamic -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pythagTriples
  default-language:    Haskell2010

test-suite pythagTriples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pythagTriples
  ghc-options:         -Wall -dynamic -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/grscheller/scheller-linux-archive
