cabal-version:      2.4
name:               ghcInfo
version:            0.1.0.0

synopsis: Prints out info on GHC's installation directories

description:
    Print out info on GHC's installation directories.  From Simon Marlow's
    book, "Haskell Parallel & Concurrent Programming in Haskell".

bug-reports: https://github.com/grscheller/scheller-linux-archive

-- The license under which the package is released.
license:            BSD-3-Clause
author:             grscheller
maintainer:         geoffrey@scheller.com
copyright:          (c) 2022 Geoffrey R Scheller

-- category:

extra-source-files: CHANGELOG.md

executable ghcInfo
    main-is:          ghcInfoMain.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.15.1.0
    build-depends: ghc-paths ^>=0.1.0.12
    hs-source-dirs:   app
    default-language: Haskell2010
